[package]
name = "heightmap-gen"
version = "0.1.0"
edition = "2021"
description = "Procedural heightmap generator with egui GUI"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "x11", "wayland"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = "0.25"
noise = "0.9"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
